# animal-color-extractor

./: LICENSE  README.md  pyproject.toml  streamlit_frontend.py  utils.py
